Table vo_branch schoolvo

--- a/documentation/_templates/layout.html
+++ b/documentation/_templates/layout.html
@@ -1,6 +1,7 @@
 {% extends "!layout.html" %}
 
 {% block footer %}
+{# Call super() to include the copyright notice #}
 {{ super() }}
 <script type="text/javascript">
     var _gaq = _gaq || [];
